# csv2listes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  resources.rc
include/: src_clipboardutils.h  src_filesutils.h  src_functions.h  src_pythonutils.h  src_stringutils.h  src_windowsutils.h
src/: src_clipboardutils.cpp  src_filesutils.cpp  src_functions.cpp  src_pythonutils.cpp  src_stringutils.cpp  src_windowsutils.cpp
tests/: CMakeLists.txt  tests_csv2list.cpp
tests/assets/: avimeca.txt  avimeca_pv.txt  fizziq_comma.csv  fizziq_dot.csv  fizziq_prob.csv  fizziq_prob_too_big.csv  fizziq_prob_too_less.csv  fizziq_prob_toolong.csv  nonread.txt  small.csv
